add description under app name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="build/js/vendor.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="build/css/vendor.css">
 
     <link rel="stylesheet" href="build/css/styles.css">
